@@ -7,6 +7,7 @@ Post-v2.6.0
      * DSCP marking is now supported, via the new northbound QoS table.
      * IPAM now supports fixed MAC addresses.
      * Support for source IP address based routing.
+     * ovn-trace can now trace put_dhcp_opts and put_dhcp_optsv6 actions.
    - Fixed regression in table stats maintenance introduced in OVS
      2.3.0, wherein the number of OpenFlow table hits and misses was
      not accurate.
